Fix table card text overflow issue, again

--- a/sass/components/_tableCard.scss
+++ b/sass/components/_tableCard.scss
@@ -13,7 +13,7 @@
   }
 
   &__info {
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
     @include mobile {
